Didn't explicitly add files

--- a/src/Tests/TribalThirst.Cards.Tests/TribalThirst.Cards.Tests.csproj
+++ b/src/Tests/TribalThirst.Cards.Tests/TribalThirst.Cards.Tests.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Librarires\TribalThirst.Cards\TribalThirst.Cards.csproj" />
+    <ProjectReference Include="..\..\Libraries\TribalThirst.Cards\TribalThirst.Cards.csproj" />
   </ItemGroup>
 
   <ItemGroup>
